# anki_srs_kai

./: 404.html  CHANGELOG.html  CHANGELOG.md  Cargo.toml  Makefile  README.md  deny.toml  deps.json  flake.nix  fsrs_to_sm2.ipynb  index.html  print.html  release.sh  searchindex.js  searchindex.json  toc.html  toc.js
.github/workflows/: artifacts.yml  ci.yml  docs.yml
AnkiDroid/src/androidTest/java/com/ichi2/anki/ankisrskai/: AnkiSrsKaiAddonTest.kt  AnkiSrsKaiIntegrationTest.kt  AnkiSrsKaiTestUtils.kt
addon/: __init__.py  update_custom_data.sql
anki_srs_kai/: Cargo.toml
anki_srs_kai/src/: anki.rs  ease_reward.rs  lib.rs  scheduler.rs
guide/: book.toml  configuration.html  configurationExamples.html  easeReward.html  faq.html  fsrs.html  fsrsToSM2.html  installation.html  issuesWithAnkiSM2.html  personalResults.html  recommendations.html  scheduler.html  straightRewardMigration.html  supportDevelopment.html  why.html
guide/src/: README.md  SUMMARY.md
guide/src/guide/: configuration.md  configurationExamples.md  easeReward.md  faq.md  fsrs.md  fsrsToSM2.md  installation.md  issuesWithAnkiSM2.md  personalResults.md  recommendations.md  scheduler.md  straightRewardMigration.md  supportDevelopment.md  why.md
src/: anki.rs  ease_reward.rs  lib.rs  scheduler.rs
xtask/: Cargo.toml
xtask/src/: javascript.rs  main.rs
