[workspace]
resolver = "2"
members = ["anki_srs_kai", "xtask"]

[profile.release]
lto = true

[workspace.package]
version = "25.8.0"
edition = "2021"
authors = ["kuroahna"]
repository = "https://github.com/kuroahna/anki_srs_kai"
homepage = "https://github.com/kuroahna/anki_srs_kai"
license = "AGPL-3.0-or-later"

[workspace.metadata.crane]
name = "anki_srs_kai"
