[package]
name = "anki_srs_kai"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = { version = "0.3.72", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
serde = { version = "1.0.214", default-features = false, features = ["derive"] }
serde-wasm-bindgen = { version = "0.6.5", default-features = false }
wasm-bindgen = { version = "0.2.95", default-features = false }
wasm-bindgen-test = { version = "0.3.45", default-features = false }

[dev-dependencies]
wasm-bindgen-test = { version = "0.3.45", default-features = false }
